Fixed size of title on smaller screens and changed noise timing manip

--- a/web-experiments/src/pages/ProjectList/08_WebGLGallery/components/MultiplePlanes/style.module.scss
+++ b/web-experiments/src/pages/ProjectList/08_WebGLGallery/components/MultiplePlanes/style.module.scss
@@ -67,6 +67,10 @@
   line-height: 0.8em;
   opacity: 0;
   z-index: -1;
+
+  @media (max-height: 900px) {
+    font-size: 12em;
+  }
 }
 
 .inview-split-parent {
